# Language4Water

./: .gitignore  Procfile  README.md  environment.yml  jupyter_config.json  pyproject.toml  requirements.txt
.github/: dependabot.yaml
00 - Intro/: 01 - Introduction to Python.md  02 - Installation.md  03 - Questionnaire.md  2019-10-09_cheatsheet.html
01 - 20191012/: 2019_10_16.ipynb
01 - 20191016/: 2019_10_16.html  2019_10_16.ipynb  2019_10_16_post.html  2019_10_16_post.ipynb
02 - 20191030/: pandas_intro.ipynb
03 - 20161106/: CarbonFootprint.ipynb  CarbonFootprintBreakdown.csv  LifeExpectancy.ipynb
03 - 20161106/data/: HealthyLifeExpectancy+.csv
03 - 20161106/other_examples/: scot_stats_auxil.py
03 - 20191030/: pandas_intro.ipynb
03 - 20191106/: Lesson.ipynb
03 - 20191106/other_examples/: LifeExpectancy.ipynb
04 - 20191113/: 00_StaticMap_tofill.ipynb  01_StaticMap.ipynb  02_Interactive_Map.ipynb  interactive_map.html
04 - 20191113/data/: UCimplem.csv
04 - 20191113/filled_out/: 01_StaticMap.ipynb
05 - 20191120/: 01_StaticMap.ipynb
07 - 20191203/: Hangman.ipynb  Resources.ipynb
08 - 20191209/: Hangman.ipynb
09 - 20191211/: Hangman.ipynb  pigmentation.ipynb  pigmentation.tsv  pigmentation_and_thickness.csv  pigmentation_and_thickness.ipynb
2020-10-06 Intro/: 02 - Installation.md  Basics.ipynb
2020-10-13 Data Exploration/: Basics_plus.ipynb  HappinessReport.ipynb
2020-10-20 Data Exploration 2/: PythonFundamentals_.ipynb
2020-10-onwards Colab/: HappinessReport.ipynb  InventoryApp.ipynb  InventoryApp_part2.ipynb  Ipywidgets.ipynb  PythonFundamentals.ipynb  PythonFundamentals_afterlesson.ipynb  Schedule.txt
2020-11-24/: InventoryWebApp.ipynb
2020-21_semester2/: 01_L4W_Intro.ipynb  02_GoogleColab.ipynb  03_Basics_of_Programming_part2.ipynb  04_Basics_of_Programming_part2.ipynb  05_Basics_of_Programming_part3.ipynb  06_Basics_of_Programming_part4.ipynb  07_Interacting_with_files.ipynb  08_Intro_to_data_analysis.ipynb  09_Data_from_Web.ipynb  10_Object_Oriented_Programming.ipynb  11_BotRacingUpgrade.ipynb  InstallationLinks.md
2021-22_semester1/: 04_Basics_of_Programming_part2.ipynb  BotGame.ipynb
2021-22_semester1/jess_data/: JessData.ipynb  wtg.json
2021-22_semester2/: 01_L4W_Intro.ipynb  01_L4W_Intro.slides.html  03_Basics_of_Programming_part1.ipynb  04_Basics_of_Programming_part2.ipynb  05_Basics_of_Programming_part3.ipynb  06a_Live - Interacting with file system.ipynb  07_Interacting_with_files.ipynb  08_Intro_to_data_analysis.ipynb  09_Data_from_Web.ipynb  B1_search_in_tsv.ipynb  pyproject.toml  requirements.txt
2021-22_semester2/bespoke_samples/: dummyfile.txt  greyword_search_result.tsv
2021-22_semester2/bespoke_samples/desktop_gui/: 0_simple_app.py  3_select_file.py
2021-22_semester2/bespoke_samples/desktop_gui/tkinter/: 0_pure_tkinter.py  1_high_low.py
2021-22_semester2/bespoke_samples/excel_processing/: app.py  raw_data.xlsx
2022-23_semester2/: .flake8  00_L4W_Notebook_downloader.ipynb  02_Intro_to_Jupyer_Notebooks.ipynb  03_Basics_of_Programming_part1.ipynb  04_Basics_of_Programming_part2.ipynb  06_Basics_of_Programming_part4.ipynb  07_Interacting_with_files.ipynb  08_Intro_to_data_analysis.ipynb  09_Data_from_Web.ipynb  10_More_plotting.ipynb  11_Automation.ipynb  EliasExercises_2023-02-27.ipynb  HighLow.ipynb  notebook_downloader.py  pyproject.toml  requirements.txt
archive/: requirements.txt
archive/2019-20_semester1/00 - Intro/: 2019-10-09_cheatsheet.ipynb
archive/2019-20_semester1/01 - 20191016/: 2019_10_16.ipynb  2019_10_16_post.ipynb
archive/2019-20_semester1/02 - 20191030/: food_safety_Glasgow.csv  pandas_intro.ipynb
archive/2019-20_semester1/03 - 20191106/: Lesson.ipynb
archive/2019-20_semester1/04 - 20191113/: 00_StaticMap_tofill.ipynb
archive/2019-20_semester1/05 - 20191120/: 01_StaticMap.ipynb  02_CodeExercises.ipynb
archive/2019-20_semester1/06 - 20191127/: CodeExercises_solved.ipynb
archive/2019-20_semester1/07 - 20191203/: Resources.ipynb
archive/2019-20_semester1/08 - 20191209/: Hangman.ipynb
archive/2019-20_semester1/09 - 20191211/: Hangman.ipynb  pigmentation.ipynb  pigmentation_and_thickness.ipynb
archive/2019-20_semester1/other/: setup_guide.md
archive/2019_semester1/01 - 20191016/: 2019_10_16.ipynb  2019_10_16_post.ipynb
archive/2019_semester1/02 - 20191030/: pandas_intro.ipynb
archive/2019_semester1/04 - 20191113/: 00_StaticMap_tofill.ipynb
archive/2019_semester1/05 - 20191120/: 02_CodeExercises.ipynb
archive/2019_semester1/06 - 20191127/: CodeExercises_solved.ipynb
archive/2020-21_semester1/2020-10-06 Intro/: Basics.ipynb
archive/2020-21_semester1/2020-10-13 Data Exploration/: Basics_plus.ipynb  HappinessReport.ipynb
archive/2020-21_semester1/2020-10-20 Data Exploration 2/: PythonFundamentals_.ipynb
archive/2020-21_semester2/: 03_Basics_of_Programming_part1.ipynb  04_Basics_of_Programming_part2.ipynb  05_Basics_of_Programming_part3.ipynb  06_Basics_of_Programming_part4.ipynb  07_Interacting_with_files.ipynb  08_Intro_to_data_analysis.ipynb  09_Data_from_Web.ipynb  10_Object_Oriented_Programming.ipynb  11_BotRacingUpgrade.ipynb
archive/2021-22_semester1/: 01_L4W_Intro.ipynb  02_GoogleColab.ipynb  04_Basics_of_Programming_part2.ipynb  05_Basics_of_Programming_part3.ipynb  BotGame.ipynb
archive/2021-22_semester2/: 04_Basics_of_Programming_part2.ipynb  05_Basics_of_Programming_part3.ipynb  06_Basics_of_Programming_part4.ipynb  06a_Live - Interacting with file system.ipynb  07_Interacting_with_files.ipynb  08_Intro_to_data_analysis.ipynb  09_Data_from_Web.ipynb  B1_search_in_tsv.ipynb  launcher.bat  requirements.txt
archive/2022-23_semester2/: 03_Basics_of_Programming_part1.ipynb  04_Basics_of_Programming_part2.ipynb  06_Basics_of_Programming_part4.ipynb  07_Interacting_with_files.ipynb  08_Intro_to_data_analysis.ipynb  09_Data_from_Web.ipynb  10_More_plotting.ipynb  11_Automation.ipynb  HighLow.ipynb  notebook_downloader.py
assets/: cat_haiku.txt
other/: jupylab_runner.bat
other/flask_base/: app.py
webapp/: dataset.csv
(+25 files in other folders)
