[project]
name = "l4w_python_course"
version = "1.0.0"
description = "Python4Water"
authors = [{ name = "Gabriele Calvo", email = "gcalvo87@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "poethepoet>=0.12.2",
    "pytest>=9.0.2",
    "pytest-random-order>=1.2.0",
    "ruff>=0.1.14",
]

[tool.ruff]
line-length = 120
target-version = "py310"
show-fixes = true

[tool.ruff.lint]
select = [ # see https://beta.ruff.rs/docs/rules/
  "A", "E", "F", "UP", "I", "W", "SIM", "RUF", "C901"
]
ignore = [
  "A002", # Argument `id` is shadowing a Python builtin
  "A003", # Class attribute `...` is shadowing a Python builtin
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]
exclude = [
    ".venv",
    "__ignore__",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = "tests|__ignore__|.venv"

[tool.pytest.ini_options]
addopts = "--random-order-seed=424242"
markers = ["integration: mark a test that needs analytics api running"]
filterwarnings = [
    "error",
]

[tool.poe.tasks.jupy]
help = "Starts Jupyterlab Server"
shell = "uv run jupyter lab"

[tool.poe.tasks.lint]
help = "Formats and lints the files"
sequence = [
    { cmd = "uv run ruff format ." },
    { cmd = "uv run ruff check . --fix"},
    { cmd = "uv run mypy ."},
]

[tool.poe.tasks.test]
help="Runs tests"
shell = "pytest ."

[tool.poe.tasks.all]
help = "Gets files ready to be committed"
sequence = ["lint", "test"]
