[tool.poetry]
name = "2021-22_semester2"
version = "1.0.0"
description = "Python4Water 2021/22 Summer Semester"
authors = ["Gabriele Calvo <gcalvo87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.8"
black = "^21.12b0"
flake8 = "^4.0.1"
pip = "^21.3.1"
poethepoet = "^0.12.2"
isort = "^5.10.1"
PySimpleGUI = "^4.57.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poe.tasks]
intro_slides = {shell = "poetry run jupyter nbconvert 01_L4W_Intro.ipynb --to slides --post serve", help="Launches Intro slides"}
jupy = {shell = "poetry run jupyter lab", help="Starts Jupyterlab Server"}
lint.sequence = ["_black", "_isort", "_flake8"]
lint.help = "Formats and lints the files"
test = {shell = "pytest .", help="Runs tests"}
all.sequence = ["lint", "test"]
all.help = "Gets files ready to be committed"
export = {shell = "poetry export -f requirements.txt --output requirements.txt", help="Exports requirements.txt"}

# auxiliary
_black = {shell = "poetry run black ."}
_isort = {shell = "poetry run isort ."}
_flake8 = {shell = "poetry run flake8 ."}
