[tool.poetry]
name = "l4w_python_course"
version = "1.0.0"
description = "Python4Water 2022/23 Summer Semester"
authors = ["Gabriele Calvo <gcalvo87@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
jupyterlab = ">=3.2.8"
PySimpleGUI = ">=4.57.0"
pandas = ">=1.4.1"

[tool.poetry.dev-dependencies]
black = ">=21.12b0"
flake8 = ">=4.0.1"
poethepoet = ">=0.12.2"
isort = ">=5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poe.tasks]
intro_slides = {shell = "poetry run jupyter nbconvert 01_L4W_Intro.ipynb --to slides --post serve", help="Launches Intro slides"}
export = {shell = "poetry export -f requirements.txt --output requirements.txt", help="Exports requirements.txt"}

[tool.poe.tasks.jupy]
help = "Starts Jupyterlab Server"
shell = "poetry run jupyter lab"

[tool.poe.tasks.lint]
help = "Formats and lints the files"
sequence = [{shell = "poetry run black ."}, {shell = "poetry run isort ."}, {shell = "poetry run flake8 ."}]

[tool.poe.tasks.test]
help="Runs tests"
shell = "pytest ."

[tool.poe.tasks.all]
help = "Gets files ready to be committed"
sequence = ["lint", "test"]

